# sso/cmd/sso/docs/swagger.yaml
@@ -18,6 +18,8 @@ definitions:
     type: object
   dto.Register:
     properties:
+      avatar:
+        type: string
       birthday:
         type: string
       email:
@@ -36,6 +38,23 @@ definitions:
       error:
         type: string
       refresh_token:
+        type: string
+      status:
+        type: string
+      user_id:
+        type: string
+    type: object
+  dto.UserResponse:
+    properties:
+      avatar:
+        type: string
+      birthday:
+        type: string
+      email:
+        type: string
+      error:
+        type: string
+      name:
         type: string
       status:
         type: string
@@ -65,6 +84,19 @@ paths:
       summary: Проверка, что приложение живо
       tags:
       - Health
+  /auth/info:
+    get:
+      description: Provides a user info.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: info successful
+          schema:
+            $ref: '#/definitions/dto.UserResponse'
+      summary: Info
+      tags:
+      - Auth
   /auth/login:
     post:
       consumes:
