# sso/internal/handlershttp/http/v1/auth.go
@@ -4,6 +4,7 @@ import (
 	"context"
 	"encoding/json"
 	"errors"
+	"fmt"
 	"io"
 	"log/slog"
 	"net/http"
@@ -35,6 +36,9 @@ type authService interface {
 		ctx context.Context,
 		reqData *dto.Refresh,
 	) (userWithTokens *domain.UserWithTokens, err error)
+	Info(
+		ctx context.Context,
+	) (user *domain.User, err error)
 }
 
 type AuthHandlers struct {
@@ -221,4 +225,30 @@ func (a *AuthHandlers) Refresh(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 	dto.ResponseOKAccessRefresh(w, userWithTokens)
+}
+
+// @Summary Info
+// @Description Provides a user info.
+// @Tags Auth
+// @Produce json
+// @Success 200 {object} dto.UserResponse "info successful"
+// @Router /auth/info [get]
+func (a *AuthHandlers) Info(w http.ResponseWriter, r *http.Request) {
+	ctx, cancel := ctxWithTimeoutCause(r, a.cfg, "login timeout")
+	defer cancel()
+
+	for i, item := range r.Header {
+		fmt.Println(i, item)
+	}
+
+	user, err := a.auth.Info(ctx)
+	if err != nil {
+		if errors.Is(err, authservice.ErrInvalidCredentials) {
+			dto.ResponseErrorNotFound(w, "user not found")
+			return
+		}
+		dto.ResponseErrorInternal(w, "internal server error")
+		return
+	}
+	dto.UserResponseOk(w, user)
 }
